// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup should render correctly 1`] = `
<DocumentFragment>
  <div
    class="m-form__group"
  >
    <button
      class="c-btn m-form__btn button-group c-btn--primary is-disabled"
      disabled=""
      id="button-group"
      name="button"
      role="button"
      title=""
      type="submit"
    >
      <span
        class="c-btn__label"
      >
        button
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ButtonGroup should render correctly with defaults 1`] = `
<DocumentFragment>
  <div
    class="m-form__group"
  >
    <button
      class="c-btn m-form__btn"
      id="button-group"
      name="button"
      role="button"
      title=""
      type="button"
    >
      <span
        class="c-btn__label"
      />
    </button>
  </div>
</DocumentFragment>
`;
